v1.1 some ui, and security fixes
